DAY08/ex02/log_file
In file included from main.cpp:13:
MutantStack.hpp:17:48: error: spurious ‘>>’, use ‘>’ to terminate a template argument list
   17 | template <typename T, typename C = std::deque<T>>
      |                                                ^~
MutantStack.hpp:18:43: error: ‘C’ was not declared in this scope
   18 | class MutantStack : public std::stack <T, C>
      |                                           ^
MutantStack.hpp:18:44: error: template argument 2 is invalid
   18 | class MutantStack : public std::stack <T, C>
      |                                            ^
MutantStack.hpp:19:1: error: definition of ‘class MutantStack’ inside template parameter list
   19 | {
      | ^
MutantStack.hpp:17:36: error: two or more data types in declaration of ‘type name’
   17 | template <typename T, typename C = std::deque<T>>
      |                                    ^~~
MutantStack.hpp:97:2: error: expected ‘>’ before ‘;’ token
   97 | };
      |  ^
MutantStack.hpp:97:2: error: expected unqualified-id before ‘;’ token
main.cpp: In function ‘int main()’:
main.cpp:17:5: error: ‘MutantStack’ was not declared in this scope
   17 |     MutantStack<int> mstack;
      |     ^~~~~~~~~~~
main.cpp:17:17: error: expected primary-expression before ‘int’
   17 |     MutantStack<int> mstack;
      |                 ^~~
main.cpp:18:5: error: ‘mstack’ was not declared in this scope
   18 |     mstack.push(5);
      |     ^~~~~~
main.cpp:28:17: error: expected primary-expression before ‘int’
   28 |     MutantStack<int>::iterator it = mstack.begin();
      |                 ^~~
main.cpp:29:17: error: expected primary-expression before ‘int’
   29 |     MutantStack<int>::iterator ite = mstack.end();
      |                 ^~~
main.cpp:30:7: error: ‘it’ was not declared in this scope; did you mean ‘int’?
   30 |     ++it;
      |       ^~
      |       int
main.cpp:32:18: error: ‘ite’ was not declared in this scope
   32 |     while (it != ite)
      |                  ^~~
make: *** [Makefile:18: main.o] Error 1
